[package]
name = "xapod"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
dirs = "4.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = "0.58.0"

[target.'cfg(target_os = "linux")'.dependencies]
